# QuantEngine

./: .env.example  .gitignore  CMakeLists.txt  LICENSE  README.md  backtester.py  broker_feed.py  config.py  costs.py  data_loader.py  live_monitor.py  main.py  paper_trade.py  requirements.txt  risk.py  strategy.py
core/: bindings.cpp
core/include/: indicators.hpp  screener.hpp  types.hpp
core/src/: indicators.cpp  screener.cpp
live/: aggregator.py  brain.py  config_live.py  paper_trader.py  run.py  streamer.py
tests/: generate_report.py  harness.py  run_all.py  test_best_day.py  test_feature_shuffle.py  test_out_of_sample.py  test_sensitivity.py
